name:                hi
version:             1.0.0.0
synopsis:            Generate scaffold for cabal project
license:             BSD3
license-file:        LICENSE
author:              Fujimura Daisuke
maintainer:          me@fujimuradaisuke.com
category:            Distribution
build-type:          Simple
cabal-version:       >=1.8
homepage:            https://github.com/fujimura/hi
data-files:
    templates/flat/.gitignore.template
    templates/flat/LICENSE.template
    templates/flat/Main.hs.template
    templates/flat/ModuleName.hs.template
    templates/flat/README.md.template
    templates/flat/package-name.cabal.template
    templates/hspec/.gitignore.template
    templates/hspec/LICENSE.template
    templates/hspec/README.md.template
    templates/hspec/package-name.cabal.template
    templates/hspec/src/ModuleName.hs.template
    templates/hspec/src/ModuleName/Internal.hs.template
    templates/hspec/test/ModuleNameSpec.hs.template
    templates/hspec/test/Spec.hs.template
description:
    This application generates a scaffold for Haskell project from a Git repository.

    .
    This command
    .

    .
    > $ hi --package-name "foo-bar-baz" --module-name "Foo.Bar.Baz" --author "Fujimura Daisuke" --email "me@fujimuradaisuke.com"
    .

    .
    will generate:
    .

    .
    > $ tree .
    > .
    > ├── LICENSE
    > ├── README.md
    > ├── foo-bar-baz.cabal
    > ├── src
    > │  └── Foo
    > │      └── Bar
    > │          ├── Baz
    > │          │  └── Internal.hs
    > │          └── Baz.hs
    > └── test
    >     ├── Foo
    >     │  └── Bar
    >     │      ├── Baz
    >     │      └── BazSpec.hs
    >     └── Spec.hs
    .

    .
    See <https://github.com/fujimura/hi> for further usage.
    .


library
  exposed-modules:
      Hi
      Hi.Cli
      Hi.Directory
      Hi.FilePath
      Hi.Git
      Hi.Option
      Hi.CommandLineOption
      Hi.Template
      Hi.Types
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  other-modules:
      Paths_hi
  build-depends:
        base          == 4.*
      , ansi-wl-pprint
      , bytestring
      , directory
      , filepath
      , optparse-applicative >= 0.10.0
      , parsec
      , process
      , split
      , template      == 0.2.*
      , temporary     >= 1.2.0.3
      , text          > 1.0
      , time

executable hi
  main-is:
      Main.hs
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  build-depends:
        base       == 4.*
      , ansi-wl-pprint
      , bytestring
      , directory
      , filepath
      , optparse-applicative >= 0.10.0
      , parsec
      , process
      , split
      , template   == 0.2.*
      , temporary  == 1.2.0.3
      , text       > 1.0
      , time

test-suite spec
  main-is:
      Spec.hs
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      src
    , test
  build-depends:
        base
      , ansi-wl-pprint
      , HUnit
      , bytestring
      , directory
      , doctest
      , filepath
      , hspec       >= 2.0.0
      , optparse-applicative >= 0.10.0
      , parsec
      , process
      , silently
      , split
      , template    == 0.2.*
      , temporary   == 1.2.0.3
      , text       > 1.0
      , time

test-suite doctests
  type:
      exitcode-stdio-1.0
  ghc-options:
      -threaded
  hs-source-dirs:
      src
    , test
  main-is:
      doctests.hs
  build-depends:
      base, doctest >= 0.8, process

source-repository head
  type:     git
  location: https://github.com/fujimura/hi.git
