name: hi
version: 1.1.0.3
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: me@fujimuradaisuke.com
homepage: https://github.com/fujimura/hi
bug-reports: https://github.com/fujimura/hi/issues
synopsis: Generate scaffold for cabal project
description:
    This application generates a scaffold for Haskell project from a Git repository.
    .
    This command
    .
    .
    > $ hi foo-bar-baz
    .
    .
    will generate:
    .
    .
    > $ tree .
    > .
    > ├── LICENSE
    > ├── README.md
    > ├── foo-bar-baz.cabal
    > ├── src
    > │  └── Foo
    > │      └── Bar
    > │          ├── Baz
    > │          │  └── Internal.hs
    > │          └── Baz.hs
    > └── test
    >     ├── Foo
    >     │  └── Bar
    >     │      ├── Baz
    >     │      └── BazSpec.hs
    >     └── Spec.hs
    .
    .
    See <https://github.com/fujimura/hi> for further usage.
    .
category: Distribution
author: Fujimura Daisuke
 
source-repository head
    type: git
    location: https://github.com/fujimura/hi.git
 
library
    build-depends:
        base ==4.*,
        ansi-wl-pprint -any,
        bytestring -any,
        directory -any,
        filepath -any,
        optparse-applicative >=0.10.0,
        parsec -any,
        process >=1.2.0.0,
        split -any,
        template ==0.2.*,
        temporary >=1.2.0.3,
        text >1.0,
        time -any
    exposed-modules:
        Hi
        Hi.Cli
        Hi.Config
        Hi.Directory
        Hi.FilePath
        Hi.Git
        Hi.Option
        Hi.CommandLineOption
        Hi.Template
        Hi.Types
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules:
        Paths_hi
    ghc-options: -Wall
 
executable hi
    build-depends:
        base ==4.*,
        ansi-wl-pprint -any,
        bytestring -any,
        directory -any,
        filepath -any,
        optparse-applicative >=0.10.0,
        parsec -any,
        process >=1.2.0.0,
        split -any,
        template ==0.2.*,
        temporary ==1.2.0.3,
        text >1.0,
        time -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    ghc-options: -Wall
 
test-suite spec
    build-depends:
        base -any,
        ansi-wl-pprint -any,
        HUnit -any,
        bytestring -any,
        directory -any,
        doctest -any,
        filepath -any,
        hspec >=2.0.0,
        optparse-applicative >=0.10.0,
        parsec -any,
        process -any,
        silently -any,
        split -any,
        template ==0.2.*,
        temporary ==1.2.0.3,
        text >1.0,
        time -any
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    buildable: True
    hs-source-dirs: src test
    ghc-options: -Wall
test-suite doctests
    build-depends:
        base -any,
        doctest >=0.8,
        process -any
    type: exitcode-stdio-1.0
    main-is: doctests.hs
    buildable: True
    hs-source-dirs: src test
    ghc-options: -threaded
 
