cabal-version: 2.4
name:          hi
version:       1.2.0.2
build-type:    Simple
license:       BSD-3-Clause
license-file:  LICENSE
maintainer:    me@fujimuradaisuke.com
homepage:      https://github.com/fujimura/hi.git#readme
bug-reports:   https://github.com/fujimura/hi.git/issues
synopsis:      Generate scaffold for cabal project
description:
  This application generates a scaffold for Haskell project from a Git repository.
  .
  This command
  .
  .
  > $ hi foo-bar-baz
  .
  .
  will generate:
  .
  .
  > $ tree .
  > .
  > ├── LICENSE
  > ├── README.md
  > ├── foo-bar-baz.cabal
  > ├── src
  > │  └── Foo
  > │      └── Bar
  > │          ├── Baz
  > │          │  └── Internal.hs
  > │          └── Baz.hs
  > └── test
  >     ├── Foo
  >     │  └── Bar
  >     │      ├── Baz
  >     │      └── BazSpec.hs
  >     └── Spec.hs
  .
  .
  See <https://github.com/fujimura/hi> for further usage.

category:      Distribution
author:        Fujimura Daisuke

source-repository head
  type:     git
  location: https://github.com/fujimura/hi.git

common shared
  default-language: Haskell2010
  other-modules:    Paths_hi
  ghc-options:      -Wall
  build-depends:
    , ansi-wl-pprint
    , base                  >=4       && <5
    , bytestring
    , directory
    , filepath
    , optparse-applicative  >=0.13.0
    , parsec
    , process               >=1.2.0.0
    , split
    , template              ^>=0.2
    , temporary             >=1.2.0.3
    , text                  >1.0
    , time

library
  import:          shared
  exposed-modules:
    Hi
    Hi.Cli
    Hi.CommandLineOption
    Hi.Config
    Hi.Directory
    Hi.FilePath
    Hi.Git
    Hi.Option
    Hi.Template
    Hi.Types

  hs-source-dirs:  src
  other-modules:   Main

executable hi
  import:         shared
  other-modules:
    Hi
    Hi.Cli
    Hi.CommandLineOption
    Hi.Config
    Hi.Directory
    Hi.FilePath
    Hi.Git
    Hi.Option
    Hi.Template
    Hi.Types
    Paths_hi

  main-is:        Main.hs
  hs-source-dirs: src

test-suite spec
  import:             shared
  build-depends:
    , hspec     >=2.0.0
    , HUnit
    , silently

  build-tool-depends: hspec-discover:hspec-discover -any
  other-modules:
    FeatureSpec
    Hi
    Hi.Cli
    Hi.CommandLineOption
    Hi.Config
    Hi.Directory
    Hi.FilePath
    Hi.Git
    Hi.GitSpec
    Hi.Option
    Hi.Template
    Hi.Types
    HiSpec
    Paths_hi
    SpecHelper

  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     src test
